made simple build file

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -8,7 +8,8 @@
     <nav></nav>
     <section>
       {{#each flavors}}
-        {{> flavor flavor=this }}
+        {!-- {> flavor flavor=this --}}
+        {{name}}
       {{/each}}
     </section>
   </body>
