--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -1,29 +1,91 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+ <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!---<link rel="stylesheet" href="responsivedesign.css">-->
     <meta charset="utf-8">
-    <title>Ice Cream Bytes</title>
+    <title>Icecream Bytes</title>
   </head>
   <body>
-    <nav>
-      <img src="{{site.logoSrc}}" alt="{{site.logoAlt}}">
-      <p>{{site.description}}</p>
-      <ul id="social">
-        {{#each site.social}}
-          <li>
+    <section id="main">
+      <div id="sidebar">
+        <img src="{{site.logoSrc}}" alt="{{site.logoAlt}}" id="logo" >
+        <h3 class="tagline">{{site.description}}</h3>
+        <div id="social">
+          {{#each site.social}}
             <a href="{{href}}" target="_blank">
-              <img src="{{iconSrc}}" alt="{{iconAlt}}">
+              <img src="{{iconSrc}}" alt="{{iconAlt}}" class="social-icon">
             </a>
+          {{/each}}
+        </div>
+        <p>{{site.copyright}}</p>
+      </div>
+      <ul id="gallery">
+        {{#each flavors}}
+          <li>
+            <div class="flavor">
+              <svg
+                 xmlns:dc="http://purl.org/dc/elements/1.1/"
+                 xmlns:cc="http://creativecommons.org/ns#"
+                 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                 xmlns:svg="http://www.w3.org/2000/svg"
+                 xmlns="http://www.w3.org/2000/svg"
+                 version="1.1"
+                 viewBox="0 0 4.4979169 6.3499998"
+                 height="24"
+                 width="17"
+                 class="scoop">
+                <g
+                   transform="translate(-74.858185,-109.27812)">
+                  <path
+                     style="fill: {{baseColor}};"
+                     transform="matrix(0.26458333,0,0,0.26458333,74.858185,109.27812)"
+                     d="M 6,0 V 1 H 5 4 V 2 H 3 V 3 H 2 V 4 H 1 V 5 6 H 0 v 1 1 1 1 h 1 v 1 1 h 1 v 1 1 h 1 v 1 h 1 1 1 v 1 h 1 1 v -1 h 1 v 1 h 1 v 1 1 1 h 1 v -1 -1 h 1 v -1 -1 h 1 1 v -1 h 1 v -1 -1 h 1 v -1 -1 h 1 V 9 8 7 6 H 16 V 5 4 H 15 V 3 H 14 V 2 H 13 V 1 H 12 11 V 0 H 10 9 8 7 Z" />
+                </g>
+              </svg>
+              <svg
+                 xmlns:dc="http://purl.org/dc/elements/1.1/"
+                 xmlns:cc="http://creativecommons.org/ns#"
+                 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                 xmlns:svg="http://www.w3.org/2000/svg"
+                 xmlns="http://www.w3.org/2000/svg"
+                 version="1.1"
+                 viewBox="0 0 4.4979166 6.3500001"
+                 height="24"
+                 width="17"
+                 class="sprinkle-0">
+                <g
+                   transform="translate(-103.84896,-152.85878)">
+                  <path
+                     d="m 105.96562,153.12337 v 0.26459 h 0.26459 v -0.26459 z m -0.79375,0.26459 v 0.26458 h 0.26459 v -0.26458 z m 1.32292,0.26458 v 0.26458 h 0.26458 v -0.26458 z m 1.05833,0 v 0.26458 h 0.26459 v -0.26458 z m -1.5875,0.26458 v 0.26459 h 0.26459 v -0.26459 z m -0.79375,0.52917 v 0.26458 h 0.26459 v -0.26458 z m 1.32292,0 v 0.26458 h 0.26458 v -0.26458 z m -1.32292,0.52917 v 0.26458 h 0.26459 v -0.26458 z m 2.64584,0 v 0.26458 h 0.26458 v -0.26458 z m -1.5875,0.26458 v 0.26458 h 0.26458 v -0.26458 z m -2.11667,0.26458 v 0.26459 h 0.26458 v -0.26459 z m 1.05833,0.52917 v 0.26458 h 0.26459 v -0.26458 z m 1.05834,0 v 0.26458 h 0.26458 v -0.26458 z m 1.32291,0 v 0.26458 h 0.26459 v -0.26458 z m -1.85208,0.52917 v 0.26458 h 0.26458 v -0.26458 z m 0.79375,0.79375 v 0.26458 h 0.26458 v -0.26458 z" />
+                </g>
+              </svg>
+              <svg
+                 xmlns:dc="http://purl.org/dc/elements/1.1/"
+                 xmlns:cc="http://creativecommons.org/ns#"
+                 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                 xmlns:svg="http://www.w3.org/2000/svg"
+                 xmlns="http://www.w3.org/2000/svg"
+                 version="1.1"
+                 viewBox="0 0 4.4979166 6.3500001"
+                 height="24"
+                 width="17"
+                 class="sprinkle-1">
+                <g
+                   transform="translate(-99.8991,-143.99525)">
+                  <path
+                     transform="matrix(0.26458333,0,0,0.26458333,99.899101,143.99525)"
+                     d="M 6,0 V 1 H 7 V 0 Z m 5,1 v 1 h 1 V 1 Z M 8,3 V 4 H 9 V 3 Z M 3,4 V 5 H 4 V 4 Z m 11,1 v 1 h 1 V 5 Z M 1,7 V 8 H 2 V 7 Z M 6,7 V 8 H 7 V 7 Z m 5,1 v 1 h 1 V 8 Z m 2,1 v 1 h 1 V 9 Z m -9,1 v 1 h 1 v -1 z m 3,1 v 1 h 1 v -1 z m -4,1 v 1 h 1 v -1 z m 9,0 v 1 h 1 v -1 z m -1,3 v 1 h 1 v -1 z" />
+                </g>
+              </svg>
+            </div>
+            <p>{{name}}</p>
           </li>
         {{/each}}
       </ul>
-    </nav>
-    <ul id="gallery">
-      {{#each flavors}}
-        <li>
-          <h2>{{name}}</h2>
-        </li>
-      {{/each}}
-    </ul>
+    </section>
+    <footer>
+    </footer>
   </body>
 </html>
