--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 16px;
+  height: 100%;
 }
 
 body {
@@ -14,7 +15,8 @@ body {
   font-weight: 300;
   font-size: 1rem;
   line-height: 1.2;
-  color: #555;
+  color: #423f43;
+  background: linear-gradient(to top, #f6f0e0, #fefcf9, #fefcf9);
 }
 
 @font-face { font-family: pixel; src: url('dotty.ttf'); }
@@ -35,8 +37,7 @@ h1 {
 #main {
   margin: 0 auto;
   width: 100%;
-  max-width: 900px;
-  background-color: #ffffff;
+  max-width: 860px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -48,8 +49,7 @@ h1 {
 ********************/
 
 #sidebar {
-  width: 240px;
-  background-color: #ffffff;
+  width: 190px;
   padding-top: 40px;
   position: fixed;
   display: flex;
@@ -61,7 +61,7 @@ h1 {
 #logo {
   text-align: left;
   margin: 0;
-  width: 80%;
+  width: 150px;
 }
 
 h3 {
@@ -69,7 +69,10 @@ h3 {
   max-width: 171px;
   text-align: left;
   font-weight: 300;
-  font-size: 1rem;
+  font-size: 1.6rem;
+  font-family: pixel, monospace;
+  text-transform: uppercase;
+  line-height: 0.8;
 }
 
 #social img {
@@ -89,10 +92,9 @@ h3 {
   flex-flow: row wrap;
   flex-grow: 1;
   flex-shrink: 0;
-  background-color: #ffffff;
   padding-top: 40px;
   padding-left: 40px;
-  margin-left: 240px;
+  margin-left: 190px;
   margin-top: 0px;
 }
 
@@ -104,7 +106,6 @@ h3 {
 #gallery article img {
   flex-basis: 200px;
   height: 179px;
-  background-color: #ffffff;
   margin-bottom: 20px;
 }
 
@@ -133,12 +134,13 @@ h3 {
   align-items: center;
   justify-content: center;
   font-family: pixel, monospace;
-  font-size: 28px;
+  font-size: 1.35rem;
   text-transform: uppercase;
   opacity: 0;
   text-align: center;
   padding: 0 12px;
   height: 72%;
+  line-height: 0.8;
 }
 
 #gallery article:hover .flavor {
