--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -17,6 +17,7 @@ body {
   line-height: 1.2;
   color: #423f43;
   background: linear-gradient(to top, #f6f0e0, #fefcf9, #fefcf9);
+  background-attachment: fixed;
 }
 
 @font-face { font-family: pixel; src: url('dotty.ttf'); }
