new font, style tweaks, ice cream animation

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,6 +1,6 @@
 /* font definitions */
 
-@font-face { font-family: pixel; src: url('dotty.ttf'); }
+@font-face { font-family: pixel; src: url('DisposableDroidBB.ttf'); }
 
 /* base */
 
@@ -74,7 +74,7 @@ h6 {
 
 #sidebar h3 {
   text-align: left;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   line-height: 0.8;
 }
 
@@ -85,7 +85,11 @@ h6 {
 
 #made-by {
   margin-top: 2rem;
-  color: #726f73;
+  color: #827f83;
+}
+
+#made-by h3 {
+  font-size: 1.3rem;
 }
 
 #made-by h3 img {
@@ -100,7 +104,7 @@ h6 {
 }
 
 #made-by .author h4 {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
 }
 
 #made-by .author .social {
@@ -177,9 +181,29 @@ h6 {
 }
 
 #gallery article:hover .flavor {
-  opacity: 0.24;
+  opacity: 0.48;
 }
 
 #gallery article:hover .name {
   opacity: 1;
+}
+
+#gallery article:active {
+  animation: click-ice-cream;
+  animation-duration: 300ms;
+  animation-timing-function: ease-in-out;
+  animation-direction: forwards;
+  animation-iteration-count: 1;
+}
+
+@keyframes click-ice-cream {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
