added mobile styles and better deploy scripts

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <!---<link rel="stylesheet" href="responsivedesign.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Icecream Bytes</title>
   </head>
@@ -11,6 +11,7 @@
     <section id="main">
       <div id="sidebar">
         <img src="{{site.logoSrc}}" alt="{{site.logoAlt}}" id="logo" >
+        <img src="{{site.mobileLogoSrc}}" alt="{{site.logoAlt}}" id="logo-mobile" >
         <h3 class="tagline">{{site.description}}</h3>
         <div id="made-by">
           <h3>
