--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -66,10 +66,17 @@ h6 {
   justify-content: flex-start;
 }
 
-#logo {
+#logo,
+#logo-mobile {
   text-align: left;
   margin: 0;
   width: 150px;
+  max-width: 100%;
+  height: auto;
+}
+
+#logo-mobile {
+  display: none;
 }
 
 #sidebar h3 {
@@ -97,6 +104,7 @@ h6 {
   position: relative;
   top: 2px;
   margin-right: 1px;
+  max-width: 100%;
 }
 
 #made-by .author {
@@ -114,6 +122,8 @@ h6 {
 #made-by .author .social img {
   height: 30px;
   width: 30px;
+  max-width: 100%;
+  height: auto;
 }
 
 #made-by .author .social a:not(:last-child) {
@@ -129,7 +139,7 @@ h6 {
   justify-content: flex-start;
   align-items: flex-start;
   flex-flow: row wrap;
-  flex-grow: 1;
+  flex-grow: 0;
   flex-shrink: 0;
   padding-top: 40px;
   padding-left: 40px;
@@ -195,6 +205,75 @@ h6 {
   animation-direction: forwards;
   animation-iteration-count: 1;
 }
+
+/* responsive */
+
+/* two ice cream columns in horizontal layout */
+@media only screen and (min-width: 631px) and (max-width: 800px) {
+
+  /* reduce #main and #gallery widths by 200px */
+
+  #main {
+    max-width: 660px;
+  }
+
+  #gallery {
+    flex-basis: 400px;
+  }
+
+}
+
+/* one ice cream column in stacked layout */
+@media only screen and (max-width: 630px) {
+
+  #main {
+    max-width: 420px;
+    align-items: center;
+    flex-flow: column nowrap;
+    padding: 20px;
+  }
+
+  #sidebar {
+    align-items: center;
+    text-align: center;
+    position: static;
+  }
+
+  #sidebar h3.tagline {
+    margin-top: 2rem;
+  }
+
+  #sidebar h3 {
+    text-align: center;
+  }
+
+  #logo {
+    display: none;
+  }
+
+  #logo-mobile {
+    display: block;
+  }
+
+  #gallery {
+    flex-basis: auto;
+    flex-flow: column nowrap;
+    margin-left: 0;
+    padding-left: 0;
+    padding-top: 60px;
+  }
+
+  #gallery article {
+    margin-right: 0;
+  }
+
+  #gallery article:hover .name {
+    
+  }
+
+}
+
+/* animations */
 
 @keyframes click-ice-cream {
   0% {
