--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
  <html>
   <head>
+    <meta charset="utf-8">
+    <!--meta-viewport: display the website with the correct, narrow width on phones-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Icecream Bytes</title>
+    <!--css-->
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <title>Icecream Bytes</title>
+    <!--scripts-->
+    <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="main">
@@ -452,5 +456,7 @@
     </section>
     <footer>
     </footer>
+    <!--run app scripts-->
+    <script src="app.js"></script>
   </body>
 </html>
