--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -189,6 +189,9 @@ h6 {
   padding: 0 12px;
   height: 72%;
   line-height: 0.8;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 #gallery article.hover .flavor {
