--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!--meta-viewport: display the website with the correct, narrow width on phones-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Icecream Bytes</title>
     <!--css-->
     <link rel="stylesheet" type="text/css" href="normalize.css">
