add modernizr and bind js events at the right time

--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!--scripts-->
     <script src="http://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   </head>
   <body>
     <section id="main">
